[gd_scene load_steps=12 format=3 uid="uid://bw6bkk2r7mau1"]

[ext_resource type="Script" uid="uid://d1mndxx51ugk7" path="res://scripts/StageMenu.gd" id="1_did2m"]
[ext_resource type="PackedScene" uid="uid://bv2uqp01l1qbi" path="res://scenes/menu_screen.tscn" id="1_njq2h"]
[ext_resource type="PackedScene" uid="uid://fi5ofs2oiks8" path="res://scenes/starting_interface.tscn" id="2_xp8iv"]
[ext_resource type="Script" uid="uid://3axyudnaj5q6" path="res://scripts/Transition.gd" id="3_coabw"]
[ext_resource type="PackedScene" uid="uid://ck3ws17qm08if" path="res://scenes/audio_options.tscn" id="5_5in64"]
[ext_resource type="AudioStream" uid="uid://c185bsy1txa5p" path="res://assets/Music/Main_Menu.mp3" id="5_i6fpo"]
[ext_resource type="PackedScene" uid="uid://41g18l5trxwp" path="res://scenes/rebind_menu.tscn" id="6_qrap6"]

[sub_resource type="Animation" id="Animation_aspfa"]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_w04x0"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jafaa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y62jj"]
_data = {
&"Appear": SubResource("Animation_aspfa"),
&"Fade": SubResource("Animation_w04x0"),
&"RESET": SubResource("Animation_jafaa")
}

[node name="Stage_Menu" type="Node2D" node_paths=PackedStringArray("audio_options", "rebind_menu")]
script = ExtResource("1_did2m")
audio_options = NodePath("CanvasLayer/AudioOptions")
rebind_menu = NodePath("CanvasLayer/RebindMenu")

[node name="Menu_Music" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_i6fpo")
autoplay = true
bus = &"Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="MenuScreen" parent="CanvasLayer" instance=ExtResource("1_njq2h")]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Starting_Interface" parent="CanvasLayer" instance=ExtResource("2_xp8iv")]
unique_name_in_owner = true

[node name="AudioOptions" parent="CanvasLayer" instance=ExtResource("5_5in64")]
visible = false

[node name="RebindMenu" parent="CanvasLayer" instance=ExtResource("6_qrap6")]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
script = ExtResource("3_coabw")

[node name="ColorRectAnimations" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
libraries = {
&"": SubResource("AnimationLibrary_y62jj")
}
